# MeshOptimization

./: .gitignore  CMakeLists.txt  README.md
code/: aabb.cpp  aabb.h  allocator.cpp  allocator.h  ampl_solver.cpp  ampl_solver.h  ampl_test.cpp  ampl_test.h  bvh.cpp  bvh.h  common.cpp  common.h  filebuffer.cpp  filebuffer.h  geometry_algorithm.cpp  geometry_algorithm.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  mesh_test.cpp  mesh_test.h  meshopt.cpp  meshopt.h  meshopt_common.cpp  meshopt_globalfit.cpp  meshopt_internal.h  meshopt_localfit.cpp  meshopt_projection.cpp  meshopt_simpliciesfit.cpp  obj.cpp  obj.h  random.cpp  random.h  string.cpp  string.h  threadpool.cpp  threadpool.h  vector.cpp  (+1 more)
dependency/ampl/include/ampl/: ampl.h  amplexception.h  dataframe.h  entity.h  entitymap.h  environment.h  errorhandler.h  format.h  instance.h  optional.h  output.h  runnable.h  string.h  tuple.h  variant.h
dependency/ampl/include/ampl/ep/: ampl_ep.h  arg.h  countediterator.h  dataframe_ep.h  declarations.h  entity_ep.h  entitymap_ep.h  environment_ep.h  error_information.h  errorinfo_ep.h  format.cc  instance_ep.h  scopedarray.h  slice.h  tuple_ep.h  variant_ep.h
dependency/ampl/lib/: ampl-2.0.12.lib
python/: environment.yml  mesh_operation_render.py  meshopt_port.py  setup.py
resource/Opt2024_11_22_12_0_39/: option.txt  randpts.txt
